--- a/app-tp1/package.json
+++ b/app-tp1/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "6.0.5",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
   },
