--- a/app-tp1/package.json
+++ b/app-tp1/package.json
@@ -21,6 +21,12 @@
     "@angular/platform-browser": "6.0.5",
     "@angular/platform-browser-dynamic": "6.0.5",
     "@angular/router": "6.0.5",
+    "@ngx-loading-bar/core": "^2.1.2",
+    "@ngx-loading-bar/http-client": "^2.1.2",
+    "@ngx-loading-bar/router": "^2.1.2",
+    "@types/bootbox": "^4.4.36",
+    "@types/jquery": "^3.3.5",
+    "bootbox": "^4.4.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
