--- a/app-tp1/package.json
+++ b/app-tp1/package.json
@@ -26,11 +26,15 @@
     "@ngx-loading-bar/router": "^2.1.2",
     "@types/bootbox": "^4.4.36",
     "@types/jquery": "^3.3.5",
+    "angular-font-awesome": "^3.1.2",
+    "bootbox": "^4.4.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "^6.2.1",
+    "yarn": "^1.9.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
